yoshimi 2.3.4.1 M

2025-8-27 Will
bn 2396
Added scale tracking to Random Walk window

2025-8-24 Jesper
bn 2395
Added scale tracking and tooltip size adjustment based on window under cursor.

2025-7-23 Will
bn 2394
Added Slow Cymbal instrument to Drums bank.
Preliminary work on CLI reading freemode points.
Updated various docs.

2025-7-17 Will
bn 2393
Merged in freemode midi learn from Kristian.
Clarified MIDI learn action in the HTML user guide
Merged in user guide image optimisation from Jesper.
Added Slow Cymbal the Drums bank.

2025-6-10 Will + Hermann
bn 2392
Corrected tooltip for "Enable Part Reports".
Corrected some log requests using numbers instead of labels.
Fixed erroneous clearing of partsChanged flag on config changes.
Fixed regression - MidiLearn not recognising older files.
Re-ordered grouping of some part controls.
Updated Control Data.
Set bugfix release version 2.3.4.1

2025-6-9 Will
bn 2391
Final cleanups
Set release version 2.3.4

2025-6-7 Will
bn 2390
Implemented new control "Warn parts changed"
    defaults to disabled.
Set version 2.3.4 rc2

2025-6-7 Will
bn 2389
Changed wording of Hide Non-fatal Errors to Hide Non-essential reports.
Corrected accidentally changed Part label in globals.h

2025-6-7 Will
Tested LV2 for Ardour and Qtractor.
Prepared background doccumentation.
Further adjustments to user guide.

2025-6-6 Will
bn 2388
Updated HTML user guide.
Set version 2.3.4 rc1

2025-6-6 Will
bn 2387
Merged in changed parts warnings from parts branch.

2025-5-26 Will
bn 2386
Fixed Omni CLI off by one error and clarified messages.
Added Fl/platform.H to MiscGui.cpp and WidgetPDial.cpp
    for FLTK V1.4 compatibility.
Removed some long redundant commented out code.
Updated some theme example files.
Added Fiddle Kit to Strings bank.
Added Hollow Pulse to Will_Godfrey_Companion bank.

2025-5-9 Will
bn 2385
Removed redundant and commented YoshiWin code.
Removed unnecessary FL.x entry in WidgetPDial.

2025-4-8 Will
bn 2384