@@ -1,5 +1,9 @@
 yoshimi 2.3.4.1 M
 
+2025-8-27 Jesper
+bn 2397
+Adjusted tooltip positioning to handle cursor placements close to bottom of screen.
+
 2025-8-27 Will
 bn 2396
 Added scale tracking to Random Walk window
